--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="air">空气质量</string>
     <string name="pm25">PM2.5指数</string>
     <string name="menu">菜单</string>
+    <string name="city_manager">城市管理</string>
+
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
